--- a/resources/assets/sass/imports/_comments.scss
+++ b/resources/assets/sass/imports/_comments.scss
@@ -7,6 +7,11 @@
     display: table;
     width: 100%;
     min-height: 85px;
+
+    &.reply {
+        margin-left: 86px;
+        width: calc(100% - 86px);
+    }
   }
 
   .photo {
