--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,7 @@
 @import "imports/article";
 @import "imports/comments";
 @import "imports/footer";
+@import "imports/main";
 
 html {
     position: relative;
