--- a/resources/assets/sass/imports/_main.scss
+++ b/resources/assets/sass/imports/_main.scss
@@ -1,4 +1,4 @@
-/* @todo::list group item editation */
+/* @todo::list group item edit's */
 .list-group-item {
   transition: all .5s ease;
 }
@@ -24,7 +24,7 @@
   }
 }
 
-// todo: container-fuild margin up
+//@todo: container-fuild margin up
 .margin-up-nav {
   margin-top: 60px;
 }
@@ -128,27 +128,3 @@ a[href="#downvote"]{
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
